fix swag config
